--- a/main.html
+++ b/main.html
@@ -9,6 +9,7 @@
 </center>
 <!-- JavaScript -->
 <script src="js/controls.js"></script>
+<script src="js/player.js"></script>
 <script src="js/main.js"></script>
 <script type="text/javascript">
     //Make Sure Document is loaded before we can start DOM manipulation
