--- a/main.html
+++ b/main.html
@@ -10,6 +10,8 @@
 <!-- JavaScript -->
 <script src="js/controls.js"></script>
 <script src="js/player.js"></script>
+<script src="js/obstacles.js"></script>
+<script src="js/hills.js"></script>
 <script src="js/main.js"></script>
 <script type="text/javascript">
     //Make Sure Document is loaded before we can start DOM manipulation
