--- a/main.html
+++ b/main.html
@@ -10,16 +10,14 @@
 <!-- JavaScript -->
 <script src="js/controls.js"></script>
 <script src="js/player.js"></script>
-<<<<<<< HEAD
 <script src="js/obstacles.js"></script>
 <script src="js/hills.js"></script>
-=======
->>>>>>> developement
-<script src="js/main.js"></script>
+<script src="js/menu.js"></script>
+<script src="js/game.js"></script>
 <script type="text/javascript">
     //Make Sure Document is loaded before we can start DOM manipulation
     document.addEventListener('DOMContentLoaded',function() {
-        main();
+        game.start();
     });
 </script>
 </body>
