Ability to choose character

--- a/main.html
+++ b/main.html
@@ -3,7 +3,7 @@
 <head>
     <title>Unwind</title>
 </head>
-<body bgcolor="#000000">
+<body bgcolor="black">
 <center>
 <canvas id = "gameCanvas" width="640" height="480"></canvas>
 </center>
@@ -13,6 +13,7 @@
 <script src="js/obstacles.js"></script>
 <script src="js/hills.js"></script>
 <script src="js/menu.js"></script>
+<script src="js/score.js"></script>
 <script src="js/game.js"></script>
 <script type="text/javascript">
     //Make Sure Document is loaded before we can start DOM manipulation
